@@ -2,6 +2,16 @@
 
 	Backported from mainline.
 
+	2012-12-06  Peter Bergner  <bergner@vnet.ibm.com>
+
+	* config/rs6000/sysv4.h (TARGET_ASAN_SHADOW_OFFSET): Define.
+	* config/rs6000/rs6000.c (rs6000_asan_shadow_offset): New function.
+	* config/rs6000/rs6000.h (FRAME_GROWS_DOWNWARD): Disable if using ASAN.
+
+2013-06-21  Manjunath Matti <mmatti@caviumnetworks.com>
+
+	Backported from mainline.
+
 	2012-12-06  Jack Howarth <howarth@bromo.med.uc.edu>
 
 	PR 55599/sanitizer
