@@ -1,3 +1,7 @@
+2012-12-06  Peter Bergner  <bergner@vnet.ibm.com>
+
+	* configure.tgt: Enable build on powerpc*-linux.
+
 2012-12-06  Jack Howarth <howarth@bromo.med.uc.edu>
 
 	PR 55599/sanitizer
